--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,6 +1,28 @@
 input {
-	tcp {
-		port => 5000
+	redis {
+		host => redis
+		port => 6379
+		key => "metricbeat"
+		type => "metricbeat"
+		data_type => "list"
+		codec => json
+	}
+
+	redis {
+		host => redis
+		port => 6379
+		key => "nginx-access"
+		type => "nginx-access"
+		data_type => "list"
+		codec => json
+	}
+}
+
+filter {
+	if [type] == "nginx-access" {
+		grok {
+			match => { "message" => "%{COMBINEDAPACHELOG}" }
+		}
 	}
 }
 
@@ -13,3 +35,4 @@ output {
 		password => changeme
 	}
 }
+
