--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -11,3 +11,6 @@ xpack.monitoring.ui.container.elasticsearch.enabled: true
 #
 elasticsearch.username: elastic
 elasticsearch.password: changeme
+
+xpack.security.enabled: true
+xpack.security.audit.enabled: true
