--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - 6379:6379
     volumes:
-      - redis-data:/data
+      - ./redis/data:/data
+      - ./redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
     networks:
       - elk
 
@@ -62,10 +63,7 @@ services:
       - elk
     depends_on:
       - elasticsearch
-volumes:
-  redis-data:
-    driver: local
-    
+
 networks:
 
   elk:
